# napari-LF

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  napari-new2-env.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md
.napari-hub/: DESCRIPTION.md
docs/: GUVLoop480.mov  index.md  napari-LF_UserGuide_5July2022.docx
docs/GUVExperim1/: Calibration_GUVExperim1-10.lfc  DarkFrame_GUVExperim1.tif  ReadMe_GUVExperim1.txt  metadata.txt  output_stack-10.tif
docs/GUVSimul1/: DarkFrame_GUVSimul1.tif  Direct_GUVSimul1.tif  GUVSimul1_VolumeGroundTruth.tif  GUVSimul1_VolumeGroundTruthScaled.tif  LightField_GUVSimul1.tif  Radiometry_GUVSimul1.tif  ReadMe_GUVSimul1.txt  metadata.txt
src/napari_lf/: __init__.py  _widgetLF.py  _widgetLF_gui.py  _widgetLF_test.py  _widgetLF_vals.py  lfcalibrate.py  lfdeconvolve.py  lfrectify.py  main.py  napari.yaml
src/napari_lf/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_widgetLF.py  test_writer.py
src/napari_lf/examples/GUVExperim1/: Lightfield_GUVExperim1.tif  README  Radiometry_GUVExperim1.tif  metadata.txt
src/napari_lf/examples/antleg/: README
src/napari_lf/examples/seaurchin/: metadata.txt
src/napari_lf/lfa/: LF_forward_projector_simple.ipynb  LF_forward_projector_simple_JPV.ipynb  LF_forward_projector_simple_RO.ipynb  __init__.py  lfcalibrate.py  lfdeconvolve.py  lfproject.py  lfrectify.py  main_train_neural_net.ipynb  main_train_neural_net_GUVs.ipynb
src/napari_lf/lflib/: __init__.py  imageio.py  lightfield.py  linear_operators.py  multiscale3d.py  optics.py  postfilter.py  volume.py
(+30 files in other folders)
