[metadata]
name = napari-LF

author = Geneva Schlafly
author_email = gschlafly@uchicago.edu
url = https://github.com/PolarizedLightFieldMicroscopy/napari-LF
license = BSD-3-Clause
description = A temporary plugin, with npe2, to use with napari in the process of developing a light field imaging plugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/PolarizedLightFieldMicroscopy/napari-LF/issues
    Documentation = https://github.com/PolarizedLightFieldMicroscopy/napari-LF#README.md
    Source Code = https://github.com/PolarizedLightFieldMicroscopy/napari-LF
    User Support = https://github.com/PolarizedLightFieldMicroscopy/napari-LF/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-LF = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-LF = napari_lf:napari.yaml
